[gd_scene load_steps=14 format=3 uid="uid://dg4nhx1ltn1a6"]

[ext_resource type="Script" uid="uid://xdhr3amdtscs" path="res://levels/combat/combat_level.gd" id="1_jb4yy"]
[ext_resource type="Script" uid="uid://2ap302ki1u4s" path="res://levels/combat/combat_manager.gd" id="1_puw3m"]
[ext_resource type="Script" uid="uid://cufl2gpjgm5xg" path="res://cards/ressources/card_data.gd" id="3_iga5g"]
[ext_resource type="Script" uid="uid://b2cxxbvfqh3rp" path="res://cards/card_manager.gd" id="3_l68es"]
[ext_resource type="Resource" uid="uid://c37vlspnu4shp" path="res://cards/ressources/strike.tres" id="4_4h14y"]
[ext_resource type="Resource" uid="uid://dmrnb48l0f2yp" path="res://cards/ressources/defend.tres" id="5_q6cuf"]
[ext_resource type="Script" uid="uid://k4051h3swrlu" path="res://levels/combat/targeting_manager.gd" id="6_q6cuf"]
[ext_resource type="PackedScene" uid="uid://dsraprpbw37il" path="res://cards/ui/hand_ui.tscn" id="7_6vidd"]
[ext_resource type="Script" uid="uid://ha8fbmppr03t" path="res://levels/combat/turn_manager.gd" id="7_uf1ch"]
[ext_resource type="Script" uid="uid://i4m1g8ycb3tk" path="res://cards/ui/draw_pile.gd" id="8_mrekk"]
[ext_resource type="Script" uid="uid://bflesdv0ywygb" path="res://cards/ui/discard_pile.gd" id="9_t7acs"]
[ext_resource type="PackedScene" uid="uid://b3efdfqivpwqn" path="res://characters/enemy/enemy.tscn" id="10_4h14y"]
[ext_resource type="PackedScene" uid="uid://dmfcaasynl7cu" path="res://characters/player/player.tscn" id="11_q6cuf"]

[node name="CombatLevel" type="Node"]
script = ExtResource("1_jb4yy")

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("1_puw3m")

[node name="CardManager" type="Node" parent="."]
script = ExtResource("3_l68es")
initial_deck = Array[ExtResource("3_iga5g")]([ExtResource("4_4h14y"), ExtResource("4_4h14y"), ExtResource("4_4h14y"), ExtResource("4_4h14y"), ExtResource("4_4h14y"), ExtResource("4_4h14y"), ExtResource("5_q6cuf"), ExtResource("5_q6cuf"), ExtResource("4_4h14y"), ExtResource("5_q6cuf")])

[node name="TargetingManager" type="Node" parent="."]
script = ExtResource("6_q6cuf")

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("7_uf1ch")

[node name="HandUI" parent="." instance=ExtResource("7_6vidd")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_top = -111.0
offset_bottom = -111.0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1.0
color = Color(0.0735195, 0.15542917, 0.17808504, 1)

[node name="DrawPile" type="ColorRect" parent="." node_paths=PackedStringArray("card_manager")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -100.0
offset_right = 140.0
offset_bottom = -60.0
grow_vertical = 0
color = Color(0.26666668, 0.38431373, 0.4392157, 1)
script = ExtResource("8_mrekk")
card_manager = NodePath("../CardManager")

[node name="DrawPileLabel" type="Label" parent="DrawPile"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
horizontal_alignment = 2

[node name="DiscardPile" type="ColorRect" parent="." node_paths=PackedStringArray("card_manager")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -60.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.2684, 0.38279998, 0.44, 1)
script = ExtResource("9_t7acs")
card_manager = NodePath("../CardManager")

[node name="DiscardPileLabel" type="Label" parent="DiscardPile"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
horizontal_alignment = 2

[node name="Player" parent="." instance=ExtResource("11_q6cuf")]
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_top = -69.0
offset_bottom = -69.0
grow_vertical = 2

[node name="EndTurnButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -196.0
offset_top = -95.0
offset_right = -118.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn"

[node name="Enemy3" parent="." instance=ExtResource("10_4h14y")]
offset_left = 917.0
offset_top = 155.0
offset_right = 1117.0
offset_bottom = 355.0

[node name="Enemy2" parent="." instance=ExtResource("10_4h14y")]
offset_left = 692.0
offset_top = 155.0
offset_right = 892.0
offset_bottom = 355.0
